[gd_scene load_steps=4 format=2]

[ext_resource path="res://player/player.gd" type="Script" id=1]

[sub_resource type="PhysicsMaterial" id=2]
rough = true
absorbent = true

[sub_resource type="CapsuleShape2D" id=1]
radius = 14.0
height = 30.0

[node name="Player" type="RigidBody2D"]
z_index = 2
z_as_relative = false
mode = 2
mass = 10.0
physics_material_override = SubResource( 2 )
contacts_reported = 32
contact_monitor = true
can_sleep = false
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Polygon2D" parent="."]
position = Vector2( -13.6, 7.06001 )
scale = Vector2( 0.622222, 0.420132 )
polygon = PoolVector2Array( 33.4286, -35.4175, 30.8571, -7.37864, 42.4286, 54.6019, 30.8571, 54.6019, 23.1429, 26.5631, 12.8571, 54.6019, 1.28572, 54.6019, 12.8571, -7.37864, 12.8571, -35.4175, -1.28571, -16.1728, -3.85714, -32.7371, 10.2857, -51.6505, 18, -54.6019, 9, -73.7864, 21.8571, -92.9709, 39.8571, -73.5534, 28.2857, -54.6019, 33.4286, -51.6505, 47.5714, -34.2429, 45, -17.6786 )

[node name="JumpTimer" type="Timer" parent="."]
one_shot = true

[node name="GraceTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Player_body_exited"]
